--- a/TFE/Info.plist
+++ b/TFE/Info.plist
@@ -22,6 +22,17 @@
 	<string>1</string>
 	<key>FacebookAppID</key>
 	<string>1497693133821109</string>
+	<key>FacebookDisplayName</key>
+	<string>TFE</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1497693133821109</string>
+			</array>
+		</dict>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
