Removed a lot of unnecessary assets, trying to clean up a lot of code, and really trying to make this look a lot more impressive on my GitHub.
Changed the basic color scheme from purple to turquoise.

Fixed the major issue that the introduction of the tab bar was creating, with the duplicate cards appearing in the table view for the personal stack of saved cards.

--- a/TFE/Info.plist
+++ b/TFE/Info.plist
@@ -7,11 +7,11 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.SBSauce.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.SoloBando.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>Round Table</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -38,7 +38,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Would you like this app to have your location?</string>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>Main</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
